--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "description": "The Laravel Framework.",
     "keywords": ["framework", "laravel"],
     "license": "MIT",
-    "require": {
-        "php": "^8.0.2",
+    "require": {        
+        "php": "^7.3|^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14",
